[gd_scene load_steps=4 format=3 uid="uid://b7y8icoxsxby4"]

[ext_resource type="Script" path="res://hud.gd" id="1_xmxi1"]
[ext_resource type="PackedScene" uid="uid://co7txat7gmhwf" path="res://death_screen.tscn" id="2_veyaq"]
[ext_resource type="PackedScene" uid="uid://degxcwd5qmifh" path="res://success_scene.tscn" id="3_6v31w"]

[node name="hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 75.0
offset_right = -1222.0
offset_bottom = -733.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xmxi1")

[node name="death_screen" parent="." instance=ExtResource("2_veyaq")]
visible = false
offset_left = -10.0
offset_top = -80.0
offset_right = 1913.0
offset_bottom = 995.0

[node name="success_scene" parent="." instance=ExtResource("3_6v31w")]
visible = false
layout_mode = 1
offset_left = 1.0
offset_top = -79.0
offset_right = 1218.0
offset_bottom = 722.0

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="objective" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 67.0
offset_right = 222.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 50
text = "Deliver [object]"

[node name="timer" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = -51.0
offset_right = 361.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 50

[connection signal="quit" from="death_screen" to="." method="_on_death_screen_quit"]
[connection signal="restart" from="death_screen" to="." method="_on_death_screen_restart"]
[connection signal="next_level" from="success_scene" to="." method="_on_success_scene_next_level"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
